<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.michael.finalproject.microwave">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/microwave_timer"
        android:id="@+id/tv_microwavetimer"
        android:textSize="40dp"  />

       <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_timer"
        android:textSize="30sp"
        android:hint="Enter Time"
         />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/tv_runningtimer"
        android:textSize="40sp"  />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:layout_width="125dp"
            android:layout_height="60dp"
            android:text="@string/btn_start"
            android:id="@+id/btn_start"/>

        <Button
            android:layout_width="125dp"
            android:layout_height="60dp"
            android:text="@string/btn_stop"
            android:id="@+id/btn_stop"/>

        <Button
            android:layout_width="125dp"
            android:layout_height="60dp"
            android:text="@string/btn_restart"
            android:id="@+id/btn_restart"
             />


    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/microwave"/>
</LinearLayout>
